--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id("androidx.navigation.safeargs.kotlin")
 }
 
 android {
@@ -60,6 +61,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
-    implementation 'com.google.android.material:material:1.2.1'
+    // Shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
+    implementation 'com.google.android.material:material:1.2.1'
 }
